Make screnshots work for emulation with default devicescalefactor.

Bug: 754708
Change-Id: I35a5efedcbf330d793c85dc695523ecd6db588d0
Reviewed-on: https://chromium-review.googlesource.com/611796
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Pavel Feldman <pfeldman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493928}
Former-commit-id: cab5c4e97f43a69de32b2d1749d38997a0a6a1a7